...
    <RelativeLayout
        style="@style/RelativeLayout.Base"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/driver_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:scaleType="fitXY"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:src="@{viewModel.driverImage}"
            tools:src="@drawable/ic_user_icon" />

        <TextView
            android:id="@+id/driver_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/driver_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp"
            android:text="@{viewModel.driverNickname}"
...
            android:layout_below="@id/driver_name_text"
            android:layout_marginTop="9dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/driver_rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:text="@{viewModel.driverRating}"
                android:textAppearance="@style/RATextView.MontserratRegular"
                android:textSize="14sp"
...
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="15dp">

                <TextView
                    android:id="@+id/car_category_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.carCategory}"
                    android:textAppearance="@style/RATextView.MontserratLight.Default"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:text="STANDARD" />

                <TextView
                    android:id="@+id/car_category_seats_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.carCategorySeats}"
                    android:textAppearance="@style/RATextView.MontserratLight.Default"
                    android:textColor="@color/grey_600"
                    android:textSize="13sp"
                    tools:text="4 seats" />

            </LinearLayout>

            <ImageView
                android:id="@+id/priority_icon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_p_inside_circle_small"
                android:visibility="@{viewModel.priorityIconVisibility}" />

            <TextView
                android:id="@+id/surge_factor_text"
                android:layout_width="wrap_content"
                android:minWidth="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="8dp"
                android:text="@{viewModel.carCategorySurgeFactor}"
...
                android:layout_marginStart="18dp"
                android:layout_centerVertical="true"
                android:src="@{viewModel.selectedPaymentImage}"
                tools:src="@drawable/icn_visa" />

            <TextView
                android:id="@+id/text_payment_card"
                style="@style/RATextView.MontserratRegular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/icon_payment_type"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/icon_payment_type"
...
