...
            android:textSize="13sp"
            tools:text="@string/connect_driver_info"
            android:text="@{viewModel.description}"
             />

        <EditText
            android:id="@+id/driver_id_text"
            style="@style/EditText.LeaveComment"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/description"
            android:layout_marginTop="35dp"
...
            android:textColorHint="#A0A2A6"
            android:textSize="16sp"
            android:textAppearance="@style/RATextView.MontserratLight" />

        <Button
            style="@style/Button.RoundedBlueButton"
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/driver_id_text"
            android:layout_centerHorizontal="true"
            android:text="@string/btn_submit"
            android:layout_marginTop="15dp"
...
